# cg_labyrinth

./: CMakeLists.txt
bld/: test1.txt  test2.txt
src/: main.cpp
